welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value <
	case Math.abs(200 - n) < 10 => true 
                               ^nearHundred:3: error: not found: value <
	case Math.abs(100 - n) < 10 => true
                               ^